manifests/cilium/gtw-cfg.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: kube-system
spec:
  gatewayClassName: cilium
  addresses:
  - value: 192.168.105.253
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
